tests/should-fail/semantics/wrong-type-for-array-index-1.j
function xx takes nothing returns integer
	local integer array asdf
	return asdf["foo"]
endfunction
